[package]
name = "acovo"
version = "0.1.0"
edition = "2021"
description = "public rust framework"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
time = ["chrono", "chrono-tz"]
fs = ["anyhow"]
proto = ["serde", "serde_derive", "anyhow", "serde_json"]
error = []
hash = ["crc64", "hex"]
trace = ["tracing-subscriber", "tracing-appender", "tracing"]
default = ["time", "fs", "hash", "trace", "proto", "error", "dev", "net", "syncall", "http","compress"]
syncall = []
net = []
dev = []
http = ["reqwest-proxy-pool","reqwest-middleware","tokio","reqwest","anyhow"]
compress=["zip"]

[dependencies]
chrono = { version = "0.4", optional = true }
chrono-tz = { version = "0.8", optional = true }
crc64 = { version = "2", optional = true }
hex = { version = "0.4", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
tracing-appender = { version = "0.2", optional = true }
tracing = { version = "0.1", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
anyhow = { version = "1.0", optional = true }
atomic_refcell = "0.1"
dns-lookup = { version = "2.0" }

reqwest={version="*",optional = true}
reqwest-proxy-pool = {version="0.1",optional = true,git="https://github.com/acovo/reqwest-proxy-pool" }
reqwest-middleware = {version="0.4",optional = true }
tokio = { version = "1", features = ["full"], optional = true}
zip = { version = "5.1.1", optional = true}

[dev-dependencies]
crossbeam-utils = "0.8"
